[project]
name = "cyrus-webhook-proxy"
version = "0.0.1"
description = "Cyrus SQS middleware pump — long-polls SQS for Linear webhook events and (later) replays them to a local Cyrus daemon. This package currently covers only the SQS read/feed side."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "requests>=2.31",
    "awsiotsdk>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # botocore (and botocore.stub.Stubber) is transitive via boto3
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy", "webhook_feeds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]
