[project]
name = "cyrus-webhook-proxy"
version = "0.0.1"
description = "Cyrus SQS middleware pump — long-polls SQS for Linear webhook events and (later) replays them to a local Cyrus daemon. This package currently covers only the SQS read/feed side."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
# The IoT consumer feed is opt-in: its awscrt/awsiotsdk imports are lazy (only on the
# iot feed path), and the test suite guards them with pytest.importorskip. Keeping them
# out of the core deps spares every SQS-only install the heavyweight native awscrt
# wheel build. Manual QoS-1 acknowledgement control on inbound publishes (the feed's
# at-least-once contract) needs these floors: awscrt exposes
# PublishReceivedData.acquire_publish_acknowledgement_control /
# Client.invoke_publish_acknowledgement, surfaced by the awsiotsdk MQTT5 builder.
iot = [
    "awscrt>=0.34",
    "awsiotsdk>=1.30",
]
dev = [
    "pytest>=8.0",
    # botocore (and botocore.stub.Stubber) is transitive via boto3
    "awscrt>=0.34",
    "awsiotsdk>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy", "webhook_feeds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]
