[project]
name = "dashboard-chat-sdk"
version = "0.1.0"
description = "Typed Python SDK for the Dashboard Chat API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Dashboard Chat" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "pydantic>=2.6,<3",
    "attrs>=23.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "openapi-python-client>=0.21",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/zacharyallen/dashboard_chat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard_chat_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/dashboard_chat_sdk", "README.md", "openapi.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/dashboard_chat_sdk/_generated/**" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
