load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "e2e",
    srcs = ["run-e2e.sh"],
    data = [
        "//auth-proxy:image_tar",
        "//backend:image_tar",
        "//frontend:image_tar",
        "//worker:image_tar",
        "//:docker-compose.yml",
    ] + glob([
        "**/*.ts",
        "config/*",
        "fixtures/**",
    ]),
    tags = [
        "manual",
        "no-sandbox",
        "requires-docker",
        "exclusive",
    ],
    timeout = "eternal",
    size = "enormous",
)
