load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools:version_layer.bzl", "version_layer")

npm_link_all_packages()

# ─── Per-Module js_library Targets ───────────────────────────────────────────

js_library(
    name = "config",
    srcs = [
        "index.html",
        "package.json",
        "postcss.config.js",
        "tailwind.config.js",
        "tsconfig.json",
        "vite.config.ts",
        "vitest.config.ts",
    ],
    deps = [":node_modules"],
)

js_library(
    name = "test_support",
    srcs = glob([
        "src/test/**/*.ts",
        "src/__mocks__/**/*.ts",
    ]),
    deps = [":node_modules"],
)

js_library(
    name = "lib",
    srcs = glob(
        ["src/lib/**/*.ts", "src/lib/**/*.tsx"],
        exclude = ["src/lib/**/*.test.ts", "src/lib/**/*.test.tsx"],
    ),
    deps = [":node_modules"],
)

js_library(
    name = "core_auth",
    srcs = glob(
        ["src/core/auth/**/*.ts", "src/core/auth/**/*.tsx"],
        exclude = ["src/core/auth/**/*.test.ts", "src/core/auth/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [":node_modules"],
)

js_library(
    name = "core_chat",
    srcs = glob(
        ["src/core/chat/**/*.ts", "src/core/chat/**/*.tsx"],
        exclude = ["src/core/chat/**/*.test.ts", "src/core/chat/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [
        ":node_modules",
        "//shared/chat:lib",
    ],
)

js_library(
    name = "core_datacatalog",
    srcs = glob(
        ["src/core/dataCatalog/**/*.ts", "src/core/dataCatalog/**/*.tsx"],
        exclude = ["src/core/dataCatalog/**/*.test.ts", "src/core/dataCatalog/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [":node_modules"],
)

js_library(
    name = "core_toolcalls",
    srcs = glob(
        ["src/core/toolCalls/**/*.ts", "src/core/toolCalls/**/*.tsx"],
        exclude = ["src/core/toolCalls/**/*.test.ts", "src/core/toolCalls/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [":node_modules"],
)

js_library(
    name = "ui",
    srcs = glob(
        [
            "src/ui/**/*.ts",
            "src/ui/**/*.tsx",
            "src/ui/**/*.css",
        ],
        exclude = ["src/ui/**/*.test.ts", "src/ui/**/*.test.tsx"],
    ),
    deps = [":node_modules"],
)

js_library(
    name = "app_shell",
    srcs = [
        "main.tsx",
    ],
    deps = [":node_modules"],
)

# Aggregate target for Vite production build
js_library(
    name = "sources",
    srcs = [],
    visibility = ["//visibility:public"],
    deps = [
        ":app_shell",
        ":config",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
        ":ui",
    ],
)

# ─── Vite Build ──────────────────────────────────────────────────────────────

genrule(
    name = "dist",
    srcs = [
        ":sources",
        "//:.env",
    ],
    outs = ["dist.tar"],
    cmd = """
        set -a && . .env && set +a && \
        cd frontend && \
        VITE_CHAT_URL=/worker VITE_STREAM_API_KEY=$${STREAM_API_KEY:-} NODE_ENV=production npx vite build --outDir ../$$TMPDIR/dist --emptyOutDir && \
        tar -cf - -C ../$$TMPDIR dist > ../$(OUTS)
    """,
    tags = ["no-sandbox", "manual"],
    visibility = ["//visibility:public"],
)

# ─── Per-Module Test Targets ─────────────────────────────────────────────────

# Shared data deps included in every test target
_TEST_BASE = [
    ":config",
    ":test_support",
    ":node_modules",
    "//:node_modules/vitest",
    "//:node_modules/@heroicons/react",
]

vitest_bin.vitest_test(
    name = "test_lib",
    args = ["run", "--config", "vitest.config.lib.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.lib.ts",
        ":lib",
    ] + glob(["src/lib/**/*.test.ts"]),
    size = "medium",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_auth",
    args = ["run", "--config", "vitest.config.core-auth.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-auth.ts",
        ":core_auth",
        ":lib",
        ":ui",
    ] + glob(["src/core/auth/**/*.test.ts", "src/core/auth/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_chat",
    args = ["run", "--config", "vitest.config.core-chat.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-chat.ts",
        ":core_chat",
        ":core_toolcalls",
        ":lib",
    ] + glob(["src/core/chat/**/*.test.ts", "src/core/chat/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_datacatalog",
    args = ["run", "--config", "vitest.config.core-datacatalog.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-datacatalog.ts",
        ":core_datacatalog",
        ":lib",
    ] + glob(["src/core/dataCatalog/**/*.test.ts", "src/core/dataCatalog/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_toolcalls",
    args = ["run", "--config", "vitest.config.core-toolcalls.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-toolcalls.ts",
        ":core_toolcalls",
        ":core_datacatalog",
        ":core_chat",
        ":lib",
    ] + glob(["src/core/toolCalls/**/*.test.ts", "src/core/toolCalls/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_ui_hooks",
    args = ["run", "--config", "vitest.config.ui-hooks.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.ui-hooks.ts",
        ":ui",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
    ] + glob(["src/ui/hooks/**/*.test.ts", "src/ui/hooks/**/*.test.tsx"], allow_empty = True),
    size = "medium",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_ui_context",
    args = ["run", "--config", "vitest.config.ui-context.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.ui-context.ts",
        ":ui",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
    ] + glob(["src/ui/context/**/*.test.ts", "src/ui/context/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_ui_components",
    args = ["run", "--config", "vitest.config.ui-components.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.ui-components.ts",
        ":ui",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
        ":app_shell",
    ] + glob(["src/ui/components/**/*.test.ts", "src/ui/components/**/*.test.tsx"], allow_empty = True),
    size = "medium",
    tags = ["no-sandbox"],
)

test_suite(
    name = "test",
    tests = [
        ":test_lib",
        ":test_core_auth",
        ":test_core_chat",
        ":test_core_datacatalog",
        ":test_core_toolcalls",
        ":test_ui_hooks",
        ":test_ui_context",
        ":test_ui_components",
    ],
)

# ─── Lint ────────────────────────────────────────────────────────────────────

sh_test(
    name = "lint",
    srcs = ["lint_test.sh"],
    data = [
        "//:eslint.config.js",
        "//:package.json",
        "package.json",
        "tsconfig.json",
    ] + glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    tags = ["no-sandbox", "lint"],
    size = "small",
)

# ─── OCI Image ───────────────────────────────────────────────────────────────

genrule(
    name = "nginx_conf_layer",
    srcs = ["nginx.conf"],
    outs = ["nginx_conf.tar"],
    cmd = """
        mkdir -p $$TMPDIR/etc/nginx/conf.d && \
        cp $(location nginx.conf) $$TMPDIR/etc/nginx/conf.d/default.conf && \
        tar -cf $(OUTS) -C $$TMPDIR etc
    """,
    tags = ["no-sandbox", "manual"],
)

genrule(
    name = "assets_layer",
    srcs = [":dist"],
    outs = ["assets.tar"],
    cmd = """
        mkdir -p $$TMPDIR/usr/share/nginx/html && \
        tar -xf $(location :dist) -C $$TMPDIR && \
        cp -r $$TMPDIR/dist/* $$TMPDIR/usr/share/nginx/html/ && \
        tar -cf $(OUTS) -C $$TMPDIR usr
    """,
    tags = ["no-sandbox", "manual"],
)

version_layer(
    name = "version_layer",
    image_tag = "dashboard-chat/reverse-proxy:bazel",
)

genrule(
    name = "entrypoint_layer",
    srcs = ["docker-entrypoint.sh"],
    outs = ["entrypoint.tar"],
    cmd = """
        staging=$$(mktemp -d) && \
        mkdir -p $$staging/usr/local/bin && \
        cp $(location docker-entrypoint.sh) $$staging/usr/local/bin/dashboard-entrypoint.sh && \
        chmod +x $$staging/usr/local/bin/dashboard-entrypoint.sh && \
        tar -cf $(OUTS) -C $$staging usr && \
        rm -rf $$staging
    """,
    tags = ["no-sandbox", "manual"],
)

oci_image(
    name = "image",
    base = "@nginx_alpine",
    tars = [
        ":nginx_conf_layer",
        ":assets_layer",
        ":version_layer",
        ":entrypoint_layer",
    ],
    entrypoint = ["/usr/local/bin/dashboard-entrypoint.sh"],
    exposed_ports = ["80"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_tar",
    image = ":image",
    repo_tags = ["dashboard-chat/reverse-proxy:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# ─── SSR OCI Image (web-ssr) ─────────────────────────────────────────────────
#
# Hono + RRv7 SSR runtime. Mirrors agent/BUILD.bazel:56-104's pattern:
# esbuild bundles `ssr.ts` to a single ESM `ssr.mjs`, then oci_image stacks
# the bundle + version layer on `@node_20_slim`. The genrule additionally
# invokes `vite build` so the RRv7 plugin emits the SSR server bundle that
# `ssr.ts` imports at runtime (`./build/server/index.js`).
#
# Layer layout inside ssr_dist.tar:
#   /app/frontend/ssr.mjs           — esbuild output (Hono entry)
#   /app/frontend/build/server/...  — vite build SSR output (RRv7 plugin)
#   /app/frontend/build/client/...  — vite build client output (included for completeness;
#                                     the reverse-proxy image is the primary serving surface
#                                     but the SSR runtime needs the manifest for asset URLs)
#
# Per DWD-5 (frontend-coexistence). Per DESIGN application-architecture.md §6.2.

genrule(
    name = "ssr_dist",
    srcs = [
        ":sources",
        "ssr.ts",
        "//:.env",
    ],
    outs = ["ssr_dist.tar"],
    # `--banner:js` polyfills CommonJS `require` inside the ESM bundle so any
    # transitively-bundled CJS deps can still load Node built-ins at runtime —
    # same rationale as agent/BUILD.bazel:69-75.
    cmd = """
        set -a && . .env && set +a && \
        cd frontend && \
        NODE_ENV=production npx vite build && \
        npx esbuild ssr.ts --bundle --platform=node --format=esm \
            --banner:js="import{createRequire}from'module';const require=createRequire(import.meta.url);" \
            --outfile=../$$TMPDIR/app/frontend/ssr.mjs && \
        mkdir -p ../$$TMPDIR/app/frontend/build && \
        cp -r build/server ../$$TMPDIR/app/frontend/build/server && \
        cp -r build/client ../$$TMPDIR/app/frontend/build/client && \
        tar -cf - -C ../$$TMPDIR app > ../$(OUTS)
    """,
    tags = ["no-sandbox", "manual"],
    visibility = ["//visibility:public"],
)

version_layer(
    name = "ssr_version_layer",
    image_tag = "dashboard-chat/web-ssr:bazel",
)

oci_image(
    name = "ssr_image",
    base = "@node_20_slim",
    tars = [
        ":ssr_dist",
        ":ssr_version_layer",
    ],
    workdir = "/app",
    entrypoint = ["node", "frontend/ssr.mjs"],
    exposed_ports = ["3001"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "ssr_image_tar",
    image = ":ssr_image",
    repo_tags = ["dashboard-chat/web-ssr:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
