load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools:version_layer.bzl", "version_layer")

npm_link_all_packages()

# ─── Per-Module js_library Targets ───────────────────────────────────────────

js_library(
    name = "config",
    srcs = [
        "index.html",
        "package.json",
        "postcss.config.js",
        "tailwind.config.js",
        "tsconfig.json",
        "vite.config.ts",
        "vitest.config.ts",
    ],
    deps = [":node_modules"],
)

js_library(
    name = "test_support",
    srcs = glob([
        "src/test/**/*.ts",
        "src/__mocks__/**/*.ts",
    ]),
    deps = [":node_modules"],
)

js_library(
    name = "lib",
    srcs = glob(
        ["src/lib/**/*.ts", "src/lib/**/*.tsx"],
        exclude = ["src/lib/**/*.test.ts", "src/lib/**/*.test.tsx"],
    ),
    deps = [":node_modules"],
)

js_library(
    name = "core_auth",
    srcs = glob(
        ["src/core/auth/**/*.ts", "src/core/auth/**/*.tsx"],
        exclude = ["src/core/auth/**/*.test.ts", "src/core/auth/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [":node_modules"],
)

js_library(
    name = "core_chat",
    srcs = glob(
        ["src/core/chat/**/*.ts", "src/core/chat/**/*.tsx"],
        exclude = ["src/core/chat/**/*.test.ts", "src/core/chat/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [
        ":node_modules",
        "//shared/chat:lib",
    ],
)

js_library(
    name = "core_datacatalog",
    srcs = glob(
        ["src/core/dataCatalog/**/*.ts", "src/core/dataCatalog/**/*.tsx"],
        exclude = ["src/core/dataCatalog/**/*.test.ts", "src/core/dataCatalog/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [":node_modules"],
)

js_library(
    name = "core_toolcalls",
    srcs = glob(
        ["src/core/toolCalls/**/*.ts", "src/core/toolCalls/**/*.tsx"],
        exclude = ["src/core/toolCalls/**/*.test.ts", "src/core/toolCalls/**/*.test.tsx"],
        allow_empty = True,
    ),
    deps = [":node_modules"],
)

js_library(
    name = "ui",
    srcs = glob(
        [
            "src/ui/**/*.ts",
            "src/ui/**/*.tsx",
            "src/ui/**/*.css",
        ],
        exclude = ["src/ui/**/*.test.ts", "src/ui/**/*.test.tsx"],
    ),
    deps = [":node_modules"],
)

js_library(
    name = "app_shell",
    srcs = [
        "main.tsx",
    ],
    deps = [":node_modules"],
)

# RRv7 framework-mode tree (ADR-034). Includes root.tsx, routes.ts, and the
# per-route modules under app/routes/. Without this target, the vite/Bazel
# build runs against an incomplete sandbox view and silently strips loader
# exports from the SSR bundle (`hasLoader: false` in the route manifest),
# breaking every cold deep-link acceptance scenario that depends on
# server-side scope resolution. The runtime SSR entry point `ssr.ts` AND
# the framework-mode build config are also declared here so esbuild + the
# RRv7 plugin see them as hermetic inputs.
js_library(
    name = "app_framework",
    srcs = glob(
        [
            "app/**/*.ts",
            "app/**/*.tsx",
            "ssr.ts",
        ],
        exclude = [
            "app/**/*.test.ts",
            "app/**/*.test.tsx",
        ],
    ),
    deps = [":node_modules"],
)

# Aggregate target for Vite production build
js_library(
    name = "sources",
    srcs = [],
    visibility = ["//visibility:public"],
    deps = [
        ":app_framework",
        ":app_shell",
        ":config",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
        ":ui",
    ],
)

# ─── Vite / RRv7 Build ───────────────────────────────────────────────────────
#
# There is exactly ONE `react-router build` in this file (ADR-047). It lives in
# the `:ssr_dist` genrule below. The relic `:dist` genrule + nginx `:assets_layer`
# (which produced a second, independently-hashed copy of build/client for the
# reverse-proxy to serve statically) are GONE: a second build could never be
# guaranteed to agree with web-ssr's content hashes, which is the root cause of
# the `/assets/*` 404 class (ADR-047). web-ssr now owns and serves build/client.

# ─── Per-Module Test Targets ─────────────────────────────────────────────────

# Shared data deps included in every test target
_TEST_BASE = [
    ":config",
    ":test_support",
    ":node_modules",
    "//:node_modules/vitest",
    "//:node_modules/@heroicons/react",
]

vitest_bin.vitest_test(
    name = "test_lib",
    args = ["run", "--config", "vitest.config.lib.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.lib.ts",
        ":lib",
    ] + glob(["src/lib/**/*.test.ts"]),
    size = "medium",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_auth",
    args = ["run", "--config", "vitest.config.core-auth.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-auth.ts",
        ":core_auth",
        ":lib",
        ":ui",
    ] + glob(["src/core/auth/**/*.test.ts", "src/core/auth/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_chat",
    args = ["run", "--config", "vitest.config.core-chat.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-chat.ts",
        ":core_chat",
        ":core_toolcalls",
        ":lib",
    ] + glob(["src/core/chat/**/*.test.ts", "src/core/chat/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_datacatalog",
    args = ["run", "--config", "vitest.config.core-datacatalog.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-datacatalog.ts",
        ":core_datacatalog",
        ":lib",
    ] + glob(["src/core/dataCatalog/**/*.test.ts", "src/core/dataCatalog/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_core_toolcalls",
    args = ["run", "--config", "vitest.config.core-toolcalls.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.core-toolcalls.ts",
        ":core_toolcalls",
        ":core_datacatalog",
        ":core_chat",
        ":lib",
    ] + glob(["src/core/toolCalls/**/*.test.ts", "src/core/toolCalls/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_ui_hooks",
    args = ["run", "--config", "vitest.config.ui-hooks.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.ui-hooks.ts",
        ":ui",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
    ] + glob(["src/ui/hooks/**/*.test.ts", "src/ui/hooks/**/*.test.tsx"], allow_empty = True),
    size = "medium",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_ui_context",
    args = ["run", "--config", "vitest.config.ui-context.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.ui-context.ts",
        ":ui",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
    ] + glob(["src/ui/context/**/*.test.ts", "src/ui/context/**/*.test.tsx"], allow_empty = True),
    size = "small",
    tags = ["no-sandbox"],
)

vitest_bin.vitest_test(
    name = "test_ui_components",
    args = ["run", "--config", "vitest.config.ui-components.ts"],
    chdir = package_name(),
    data = _TEST_BASE + [
        "vitest.config.ui-components.ts",
        ":ui",
        ":core_auth",
        ":core_chat",
        ":core_datacatalog",
        ":core_toolcalls",
        ":lib",
        ":app_shell",
    ] + glob(["src/ui/components/**/*.test.ts", "src/ui/components/**/*.test.tsx"], allow_empty = True),
    size = "medium",
    tags = ["no-sandbox"],
)

test_suite(
    name = "test",
    tests = [
        ":test_lib",
        ":test_core_auth",
        ":test_core_chat",
        ":test_core_datacatalog",
        ":test_core_toolcalls",
        ":test_ui_hooks",
        ":test_ui_context",
        ":test_ui_components",
    ],
)

# ─── Lint ────────────────────────────────────────────────────────────────────

sh_test(
    name = "lint",
    srcs = ["lint_test.sh"],
    data = [
        "//:eslint.config.js",
        "//:package.json",
        "package.json",
        "tsconfig.json",
    ] + glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    tags = ["no-sandbox", "lint"],
    size = "small",
)

# ─── OCI Image ───────────────────────────────────────────────────────────────

genrule(
    name = "nginx_conf_layer",
    srcs = ["nginx.conf"],
    outs = ["nginx_conf.tar"],
    cmd = """
        mkdir -p $$TMPDIR/etc/nginx/conf.d && \
        cp $(location nginx.conf) $$TMPDIR/etc/nginx/conf.d/default.conf && \
        tar -cf $(OUTS) -C $$TMPDIR etc
    """,
    tags = ["no-sandbox", "manual"],
)

version_layer(
    name = "version_layer",
    image_tag = "dashboard-chat/reverse-proxy:bazel",
)

genrule(
    name = "entrypoint_layer",
    srcs = ["docker-entrypoint.sh"],
    outs = ["entrypoint.tar"],
    cmd = """
        staging=$$(mktemp -d) && \
        mkdir -p $$staging/usr/local/bin && \
        cp $(location docker-entrypoint.sh) $$staging/usr/local/bin/dashboard-entrypoint.sh && \
        chmod +x $$staging/usr/local/bin/dashboard-entrypoint.sh && \
        tar -cf $(OUTS) -C $$staging usr && \
        rm -rf $$staging
    """,
    tags = ["no-sandbox", "manual"],
)

# reverse-proxy is a pure routing/coordination image (ADR-047): nginx conf +
# build identity + entrypoint. It carries NO frontend assets — web-ssr owns and
# serves build/client. The entrypoint still writes /usr/share/nginx/html/_meta.json
# (its own build identity, dc-1k8); nginx serves that one file from its static root.
oci_image(
    name = "image",
    base = "@nginx_alpine",
    tars = [
        ":nginx_conf_layer",
        ":version_layer",
        ":entrypoint_layer",
    ],
    entrypoint = ["/usr/local/bin/dashboard-entrypoint.sh"],
    exposed_ports = ["80"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_tar",
    image = ":image",
    repo_tags = ["dashboard-chat/reverse-proxy:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# ─── SSR OCI Image (web-ssr) ─────────────────────────────────────────────────
#
# Hono + RRv7 SSR runtime. Mirrors agent/BUILD.bazel:56-104's pattern:
# esbuild bundles `ssr.ts` to a single ESM `ssr.mjs`, then oci_image stacks
# the bundle + version layer on `@node_20_slim`. The genrule additionally
# invokes `vite build` so the RRv7 plugin emits the SSR server bundle that
# `ssr.ts` imports at runtime (`./build/server/index.js`).
#
# Layer layout inside ssr_dist.tar:
#   /app/frontend/ssr.mjs           — esbuild output (Hono entry)
#   /app/frontend/build/server/...  — vite build SSR output (RRv7 plugin)
#   /app/frontend/build/client/...  — vite build client output; web-ssr serves these
#                                     statically at /assets/* (ADR-047). This is now the
#                                     SINGLE source of frontend assets — the reverse-proxy
#                                     image no longer carries a copy.
#
# This is the ONLY `react-router build` in the repo (ADR-047). `rm -rf build`
# runs first so the output contains EXACTLY one set of content-hashed assets:
# the `no-sandbox` tag means the genrule shares the source `frontend/build/`
# dir across runs, so without the clean it would accumulate stale hashed
# chunks (e.g. multiple AuthContext-*.js) and Bazel's disk cache could then
# tar up ghost variants — the determinism half of the 404 root cause.
#
# Per DWD-5 (frontend-coexistence). Per DESIGN application-architecture.md §6.2.

genrule(
    name = "ssr_dist",
    srcs = [
        ":sources",
        ":app_framework",
        "ssr.ts",
        "//:.env",
    ],
    outs = ["ssr_dist.tar"],
    # `--banner:js` polyfills CommonJS `require` inside the ESM bundle so any
    # transitively-bundled CJS deps can still load Node built-ins at runtime —
    # same rationale as agent/BUILD.bazel:69-75.
    #
    # The staging tree ($$TMPDIR/app) is wiped at the top of every run. Bazel
    # reuses $$TMPDIR across no-sandbox genrule executions, so without this the
    # `cp -r build/server <dir>` lines nest into an existing dir (server/server)
    # and a prior run's content-hashed assets persist alongside the new ones —
    # producing a tar whose SSR HTML references client hashes the served
    # build/client no longer contains (the /assets/* 404 class). One clean
    # `react-router build` is internally consistent; the corruption came purely
    # from staging-dir accumulation.
    cmd = """
        set -a && . .env && set +a && \
        cd frontend && \
        rm -rf build && \
        VITE_CHAT_URL=/worker VITE_STREAM_API_KEY=$${STREAM_API_KEY:-} NODE_ENV=production npx react-router build && \
        rm -rf ../$$TMPDIR/app && \
        mkdir -p ../$$TMPDIR/app/frontend/build && \
        npx esbuild ssr.ts --bundle --platform=node --format=esm \
            --banner:js="import{createRequire}from'module';const require=createRequire(import.meta.url);" \
            --outfile=../$$TMPDIR/app/frontend/ssr.mjs && \
        cp -r build/server ../$$TMPDIR/app/frontend/build/server && \
        cp -r build/client ../$$TMPDIR/app/frontend/build/client && \
        tar -cf - -C ../$$TMPDIR app > ../$(OUTS)
    """,
    tags = ["no-sandbox", "manual"],
    visibility = ["//visibility:public"],
)

version_layer(
    name = "ssr_version_layer",
    image_tag = "dashboard-chat/web-ssr:bazel",
)

oci_image(
    name = "ssr_image",
    base = "@node_20_slim",
    tars = [
        ":ssr_dist",
        ":ssr_version_layer",
    ],
    workdir = "/app",
    entrypoint = ["node", "frontend/ssr.mjs"],
    exposed_ports = ["3001"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "ssr_image_tar",
    image = ":ssr_image",
    repo_tags = ["dashboard-chat/web-ssr:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
