[project]
name = "dashboard-chat-planner"
version = "0.1.0"
description = "Multi-agent dashboard layout planner using LangGraph and Vizro"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "vizro>=0.1.25",
    "plotly>=5.0",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
planner = "planner.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["planner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
