# SCAFFOLD: true
#
# UI-State Tier — RED scaffold Bazel target.
# DELIVER replaces with the production build per the agent/BUILD.bazel pattern.

filegroup(
    name = "ui_state_scaffold",
    srcs = glob(["**/*.ts", "Dockerfile", "package.json", "tsconfig.json"]),
    visibility = ["//visibility:public"],
)
